feat: fix error clear console